# lychee

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  justfile  pyproject.toml
.llm/: 000-structure.md  001-idea-brainstorming.md  002-zero-context-switching.md  003-real-world-pain-points.md  004-o-que-funciona.md  004-shared-packages.md  006-pivoting.md  006-service-oriented.md  007-plugins-architecture-and-registry.md  agentic-memory.md  agentic-todo.md
examples/hello-world/: README.md  lychee.yaml  pnpm-lock.yaml
examples/hello-world/schemas/: message.schema.json
examples/hello-world/services/bar/: .gitignore  main.py  pyproject.toml  service.yaml
examples/hello-world/services/fastapi/: main.py  service.yaml
examples/hello-world/services/foo/: main.py  pyproject.toml  service.yaml
examples/hello-world/services/run_file/: main.py  service.yaml
lychee-cli/: pyproject.toml
lychee-cli/src/lychee/cli/: main.py
lychee-cli/src/lychee/cli/commands/: dev.py  init.py  install.py  new.py  plugins.py  schema.py
lychee-cli/src/lychee/cli/middleware/: error_handler.py
lychee-core/: PLUGINS.md  pyproject.toml
lychee-core/src/lychee/application/ports/: __init__.py  config_repository.py  language_runtime.py  plugin_registry.py  process_manager.py  project_repository.py  schema_compiler.py  symlink_manager.py
lychee-core/src/lychee/application/services/: runtime_orchestrator.py
lychee-core/src/lychee/application/use_cases/: add_schema.py  generate_schemas.py  restart_service.py  start_dev_server.py  stop_dev_server.py  update_schema.py
lychee-core/src/lychee/core/: __init__.py  project.py  service.py
lychee-core/src/lychee/core/config/: loader.py  merger.py  models.py
lychee-core/src/lychee/core/languages/: adapter.py  python.py  registry.py
lychee-core/src/lychee/core/schema/: manager.py  validator.py  watcher.py
lychee-core/src/lychee/core/server/: development.py
lychee-core/src/lychee/core/templates/: manager.py
lychee-core/src/lychee/core/templates/templates/basic/: .gitignore  lychee.yaml  package.json
lychee-core/src/lychee/core/templates/templates/basic/schemas/: customer.schema.json
lychee-core/src/lychee/core/templates/templates/basic/services/fastapi/: service.yaml
lychee-core/src/lychee/core/templates/templates/basic/services/run_file/: main.py  service.yaml
lychee-core/src/lychee/core/utils/: __init__.py  fs.py  logging.py  process.py
lychee-core/src/lychee/domain/: __init__.py  errors.py  project.py  service.py
lychee-core/src/lychee/infrastructure/config/: yaml_config_repository.py
lychee-core/src/lychee/infrastructure/fs/: symlink_manager.py
lychee-core/src/lychee/infrastructure/languages/: python_runtime_adapter.py
lychee-core/src/lychee/infrastructure/plugins/: __init__.py  entrypoint_registry.py  registry.py
lychee-core/src/lychee/infrastructure/process/: asyncio_manager.py
lychee-core/src/lychee/infrastructure/project/: project_repository.py
lychee-core/src/lychee/infrastructure/schema/: quicktype_python_compiler.py
lychee-python/: README.md  pyproject.toml
lychee-python/src/lychee_python/: __init__.py  runtime.py
monorepo/: __init__.py  __main__.py
monorepo/cli/: main.py
monorepo/cli/commands/: dev.py  init.py  install.py  schema.py
monorepo/cli/middleware/: error_handler.py
monorepo/config/: loader.py  merger.py  models.py
monorepo/core/: project.py  service.py
monorepo/languages/: base.py  python.py  registry.py  typescript.py
monorepo/schema/: manager.py  validator.py  watcher.py
monorepo/server/: dev.py
monorepo/templates/: manager.py
monorepo/templates/templates/basic/: README.md  lychee.yaml
monorepo/templates/templates/basic/services/fastapi/: pyproject.toml
monorepo/templates/templates/basic/services/run_file/: main.py
monorepo/tests/: conftest.py
monorepo/tests/unit/: test_language_adapters.py
monorepo/utils/: fs.py  logging.py  process.py
tests/: test_config_and_discovery.py  test_dev_usecase.py  test_domain_topo.py  test_schemas_usecase.py
