[project]
name = "lychee"
version = "0.1.69"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncclick>=8.2.2.2",
    "black>=25.1.0",
    "isort>=6.0.1",
    "jsonschema>=4.25.1",
    "mypy>=1.17.1",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
lx = "monorepo.cli.main:main"
lychee = "monorepo.cli.main:main"

[tool.black]
line-length = 90
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
