[project]
name = "lychee"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["black>=25.1.0", "isort>=6.0.1", "lychee-cli"]

[tool.uv.sources]
lychee-core = { workspace = true }
lychee-cli = { workspace = true }

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.uv.workspace]
members = ["lychee", "lychee-cli", "lychee-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "lychee-core/src/lychee/core/__init__.py"

# https://github.com/astral-sh/uv/issues/6575
[tool.hatch.build.targets.wheel]
packages = ['lychee-core/src/lychee', 'lychee-cli/src/lychee']

[tool.black]
line-length = 90
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
