[project]
name = "lychee-cli"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Marcus Figueiredo", email = "figueiredo@protonmail.com" }]
requires-python = ">=3.11"
dependencies = ["asyncclick>=8.2.2.2", "lychee-core"]

[project.scripts]
lx = "lychee.cli.main:main"
lychee = "lychee.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['src/lychee']

[tool.hatch.version]
path = '../lychee-core/src/lychee/core/__init__.py'
