[project]
name = "lychee-python"
version = "0.1.0"
description = "Lychee Python plugin (runtime + schema compiler)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lychee-core>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lychee_python"]

[project.entry-points."lychee.language_runtimes"]
python = "lychee_python.runtime:PythonRuntimePlugin"

[project.entry-points."lychee.schema_compilers"]
quicktype_python = "lychee_python.quicktype:QuicktypePythonCompiler"
